k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: gateway-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/enable-cors: "true"
    nginx.ingress.kubernetes.io/cors-allow-headers: "X-Forwarded-For, X-Forwarded-Proto, X-Forwarded-Port, X-Forwarded-Prefix"
    ingress.kubernetes.io/x-forwarded-prefix: "true"
spec:
  rules:
    - http:
        paths:
          - path: /api/(.*)
            pathType: Prefix
            backend:
              service:
                name: gateway-service
                port:
                  number: 8080
